added controllers folder

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -37,11 +37,11 @@
     <input type="text" id="office" name="office" />
     <h2>Compensation data</h2>
     <label for="salary">Salary:</label>
-    <input type="text" id="salary" name="salary" />
+    <input type="number" id="salary" name="salary" />
     <label for="bonus">Bonus:</label>
-    <input type="text" id="bonus" name="bonus" />
+    <input type="number" id="bonus" name="bonus" />
     <label for="vacation">Vacation</label>
-    <input type="text" id="vacation" name="vacation" />
+    <input type="number" id="vacation" name="vacation" />
     <label for="skills">Skills</label>
     <input type="text" id="skills" name="skills" />
     <br />
