--- a/views/new.ejs
+++ b/views/new.ejs
@@ -15,7 +15,7 @@
     <label for="lastname">Last Name:</label>
     <input type="text" id="lastname" name="lastname" />
     <label for="dob">DOB:</label>
-    <input type="text" id="dob" name="dob" />
+    <input type="number" id="dob" name="dob" />
     <label for="img">Image:</label>
     <input type="text" id="img" name="img" />
     <label for="address">Address:</label>
