--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -8,20 +8,29 @@
     <link rel="stylesheet" href="/css/new.css" />
   </head>
   <h1>EDIT EMPLOYEE DATA</h1>
+
   <form action="/employees/<%=index%>?_method=PUT" method="POST">
     <h2>Demographic data</h2>
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" value="<%=employee.name%>" />
     <label for="lastname">Last Name:</label>
-    <input type="text" id="lastname"
-    name="lastname"value="<%=employee.lastname%>"" />
+    <input
+      type="text"
+      id="lastname"
+      name="lastname"
+      value="<%=employee.lastname%>"
+    />
     <label for="dob">DOB:</label>
-    <input type="text" id="dob" name="dob"value="<%=employee.dob%>"" />
+    <input type="number" id="dob" name="dob" value="<%=employee.dob%>" />
     <label for="img">Image:</label>
-    <input type="text" id="img" name="img" value="<%=employee.img%>"" />
+    <input type="text" id="img" name="img" value="<%=employee.img%>" />
     <label for="address">Address:</label>
-    <input type="text" id="address" name="address"
-    value="<%=employee.address%>"" />
+    <input
+      type="text"
+      id="address"
+      name="address"
+      value="<%=employee.address%>"
+    />
     <label for="phone">Phone:</label>
     <input type="text" id="phone" name="phone" value="<%=employee.phone%>" />
     <label for="email">Email:</label>
@@ -42,7 +51,7 @@
       value="<%=employee.supervisor%>"
     />
     <label for="job">Job:</label>
-    <input type="text" id="job" name="job" value="<%=employee.job%>"" />
+    <input type="text" id="job" name="job" value="<%=employee.job%>" />
     <label for="job_description">Job Description:</label>
     <input
       type="text"
@@ -56,7 +65,7 @@
     <label for="salary">Salary:</label>
     <input type="text" id="salary" name="salary" value="<%=employee.salary%>" />
     <label for="bonus">Bonus:</label>
-    <input type="text" id="bonus" name="bonus" value="<%=employee.bonus%>"" />
+    <input type="text" id="bonus" name="bonus" value="<%=employee.bonus%>" />
     <label for="vacation">Vacation</label>
     <input
       type="text"
