--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,7 +5,7 @@ body {
 }
 .other {
   width: 15%;
-  height: 420px;
+  height: auto;
   float: left;
   background: blanchedalmond;
 }
@@ -20,7 +20,7 @@ h1 {
   text-align: center;
   background: steelblue;
   margin: 0 auto;
-  padding: 20px;
+  padding: 1%;
   color: blanchedalmond;
 }
 nav {
@@ -34,7 +34,7 @@ button {
   display: inline-block;
   padding: 1%;
   margin: 1%;
-  border-radius: 5px;
+  border-radius: 5pt;
   text-decoration: none;
 }
 button:hover {
@@ -51,9 +51,9 @@ h5 {
 }
 .empl {
   width: 32%;
-  height: auto;
+  height: 90%;
   border: 1px solid black;
-  margin: 0px 5px 5px 5px;
+  margin: 0% 0.5%;
   background: white;
 }
 .one {
@@ -70,7 +70,7 @@ h5 {
 }
 img {
   width: 100%;
-  height: 200px;
+  height: auto;
 }
 form {
   display: inline-block;
