--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HRapp</title>
+
     <link rel="stylesheet" href="/css/index.css" />
   </head>
   <body>
-    <h1>Employees Directory</h1>
+    <h1>EMPLOYEES DATABASE</h1>
     <nav>
-      <a href="/employees/new"><button>CLICK to ADD NEW HIRE</button> </a>
+      <a href="/employees/new"><button>CLICK TO ADD NEW HIRE</button> </a>
     </nav>
     <div class="other">
-      <h2>Departments</h2>
+      <h2>Departments:</h2>
       <a href="/employees/"><h3>Management</h3></a>
       <h3>Accounting</h3>
       <h3>Finance</h3>
