--- a/views/show.ejs
+++ b/views/show.ejs
@@ -76,7 +76,7 @@
       <div class="empl">
         <h2>Compensation Data</h2>
         <h4>Salary: <%=employee.salary%></h4>
-        <h4>Bonus: <%=employee.bous%></h4>
+        <h4>Bonus: <%=employee.bonus%></h4>
         <h4>Vacation time: <%=employee.vacation%></h4>
         <h4>Email: <%=employee.email%></h4>
       </div>
