--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -35,10 +35,11 @@
         /><br />
         <label for="dob">DOB:</label><br />
         <input
-          type="number"
+          type="text"
           id="dob"
           name="dob"
           value="<%=employee.dob%>"
+          placeholder="mm-dd-yyyy"
         /><br />
         <label for="img">Image:</label><br />
         <input
@@ -46,6 +47,7 @@
           id="img"
           name="img"
           value="<%=employee.img%>"
+          placeholder="https:// enter address .jpeg"
         /><br />
         <label for="address">Address:</label><br />
         <input
@@ -60,6 +62,7 @@
           id="phone"
           name="phone"
           value="<%=employee.phone%>"
+          placeholder="xxx-xxx-xxxx"
         /><br />
         <label for="email">Email:</label><br />
         <input
@@ -115,6 +118,7 @@
           id="salary"
           name="salary"
           value="<%=employee.salary%>"
+          placeholder="Enter annual salary ammount"
         /><br />
         <label for="bonus">Bonus:</label><br />
         <input
@@ -122,6 +126,7 @@
           id="bonus"
           name="bonus"
           value="<%=employee.bonus%>"
+          placeholder="Enter annual bonus ammount"
         /><br />
         <label for="vacation">Vacation</label><br />
         <input
@@ -129,6 +134,7 @@
           id="vacation"
           name="vacation"
           value="<%=employee.vacation%>"
+          placeholder="Enter number of days per year"
         /><br />
         <label for="skills">Skills</label><br />
         <input
