--- a/views/filter.ejs
+++ b/views/filter.ejs
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HRapp</title>
     <link rel="stylesheet" href="/css/index.css" />
+    <script src="js.js"></script>
   </head>
   <body>
     <h1>EMPLOYEES DATABASE</h1>
@@ -23,7 +24,7 @@
       <a href=""><h2 class="filter">Corp. Services</h2></a>
     </div>
     <div class="container">
-      <%employees.forEach((employe, index)=>{%>
+      <!-- <%employees.forEach((employe, index)=>{%>
       <div class="empl">
         <div class="one">
           <a href="/employees/<%=employe.id%>">
@@ -50,12 +51,7 @@
           /></a>
         </div>
       </div>
-      <%})%>
+      <%})%> -->
     </div>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
-      charset="utf-8"
-    ></script>
-    <script src="js.js"></script>
   </body>
 </html>
