--- a/views/new.ejs
+++ b/views/new.ejs
@@ -22,13 +22,18 @@
       <label for="lastname">Last Name:</label>
       <input type="text" id="lastname" name="lastname" />
       <label for="dob">DOB:</label>
-      <input type="number" id="dob" name="dob" />
+      <input type="text" id="dob" name="dob" placeholder="mm-dd-yyyy" />
       <label for="img">Image:</label>
-      <input type="text" id="img" name="img" />
+      <input
+        type="text"
+        id="img"
+        name="img"
+        placeholder="https:// enter address .jpeg"
+      />
       <label for="address">Address:</label>
       <input type="text" id="address" name="address" />
       <label for="phone">Phone:</label>
-      <input type="text" id="phone" name="phone" />
+      <input type="text" id="phone" name="phone" placeholder="xxx-xxx-xxxx" />
       <label for="email">Email:</label>
       <input type="text" id="email" name="email" />
     </div>
@@ -48,11 +53,26 @@
     <div class="content">
       <h2>COMPENSATION</h2>
       <label for="salary">Salary:</label>
-      <input type="number" id="salary" name="salary" />
+      <input
+        type="number"
+        id="salary"
+        name="salary"
+        placeholder="Enter annual salary amount"
+      />
       <label for="bonus">Bonus:</label>
-      <input type="number" id="bonus" name="bonus" />
+      <input
+        type="number"
+        id="bonus"
+        name="bonus"
+        placeholder="Enter annual bonus amount"
+      />
       <label for="vacation">Vacation</label>
-      <input type="number" id="vacation" name="vacation" />
+      <input
+        type="number"
+        id="vacation"
+        name="vacation"
+        placeholder="Enter number of days per year"
+      />
       <label for="skills">Skills</label>
       <input type="text" id="skills" name="skills" />
     </div>
