added csss to show.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/index.css" />
   </head>
   <body>
-    <h1>EMPLOYEES DATABASE</h1>
+    <h1>EMPLOYEE DATABASE</h1>
     <nav>
       <a href="/employees/new"><button>CLICK TO ADD NEW HIRE</button> </a>
     </nav>
